Full Course/Module6/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superapi-ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app.20.31.24.235.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: superapi
            port:
              number: 80
